Code impovements